--- a/trunk/vbam/trunk/project/vc2008_mfc/VBA2008.vcproj
+++ b/trunk/vbam/trunk/project/vc2008_mfc/VBA2008.vcproj
@@ -1685,7 +1685,7 @@
 	<Globals>
 		<Global
 			Name="RESOURCE_FILE"
-			Value="\Dev\vbam\trunk\src\win32\VBA.rc"
+			Value="\dev\vba2\trunk\src\win32\VBA.rc"
 		/>
 	</Globals>
 </VisualStudioProject>
